name:                pine
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ahmadnazir/pine#readme
license:             BSD3
license-file:        LICENSE
author:              Ahmad Nazir Raja
maintainer:          ahmadnazir@gmail.com
copyright:           2017 Ahmad Nazir Raja
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Model.CaseFile
                     , Model.Document
                     , Model.Signer
                     , Model.SignatureLine
                     -- http
                     , Connector.Http.Http
                     -- database
                     , Connector.Database.Database
                     , Connector.Database.Query
  build-depends:       base >= 4.7 && < 5
                     -- http
                     , lens
                     , aeson
                     , bytestring
                     , wreq
                     -- database
                     , mysql-simple
                     , containers

  default-language:    Haskell2010

executable pine-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pine
                     , bytestring
                     , mysql-simple
  default-language:    Haskell2010

test-suite pine-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pine
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ahmadnazir/pine
